--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>OOTD</title>
+    <link rel="stylesheet" href="css/layout.css">
+    <style>
+        .header {
+            background-image: none;
+        }
+    </style>
 </head>
 <body>
-    
+    <header class="header">header</header>
+    <div class="grid">
+        <nav class="lnb">
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+            </ul>
+        </nav>
+        <article>
+            test
+        </article>
+    </div>
+    <footer>footer</footer>
 </body>
 </html>
