index page ongoing

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>OOTD</title>
     <link rel="stylesheet" href="css/layout.css">
     <style>
-        .header {
-            background-image: none;
+        header {
+            height: 608px;
+            background:url("image/OOTD_header.jpg");
         }
     </style>
 </head>
 <body>
-    <header class="header">header</header>
+    <header class="header"></header>
     <div class="grid">
         <nav class="lnb">
             <ul>
