index page with image.

--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8">
     <title>OOTD</title>
     <link rel="stylesheet" href="css/layout.css">
-    <style>
-        header {
-            height: 608px;
-            background:url("image/OOTD_header.jpg");
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header"></header>
     <div class="grid">
         <nav class="lnb">
             <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
+                <li>
+                    <a href="/ootd">OOTD</a>
+                </li>
+                <li>
+                    <a href="/product">Product</a>
+                </li>
+                <li>
+                    <a href="/brand">Brand</a>
+                </li>
             </ul>
         </nav>
         <article>
             test
         </article>
     </div>
-    <footer>footer</footer>
+    <image href="mailto:ultimate1994@naver.com" class="naver_mail"></image>
+    <footer>
+        <ul>
+            <li class="instagram"></li>
+            <li class="github"></li>
+        </ul>
+    </footer>
 </body>
 </html>
