--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <nav class="lnb">
             <ul>
                 <li>
-                    <a href="/ootd">OOTD</a>
+                    <a href="./post/ootd/ootd_test.html">OOTD</a>
                 </li>
                 <li>
-                    <a href="/product">Product</a>
+                    <a href="./post/product/product_test.html">Product</a>
                 </li>
                 <li>
-                    <a href="/brand">Brand</a>
+                    <a href="./post/brand/brand_test.html">Brand</a>
                 </li>
             </ul>
         </nav>
@@ -29,8 +29,8 @@
     <image href="mailto:ultimate1994@naver.com" class="naver_mail"></image>
     <footer>
         <ul>
-            <li class="instagram"></li>
-            <li class="github"></li>
+            <a href="https://www.instagram.com/effortbug94/" target="_blank"><li class="instagram"></li></a>
+            <a href="https://github.com/ultimate1994" target="_blank"><li class="github"></li></a>
         </ul>
     </footer>
 </body>
